--- a/hw3.yml
+++ b/hw3.yml
@@ -4,7 +4,7 @@ items:
   kind: Pod
   metadata:
     labels:
-      app: application
+      app: hw3
       name: backend
     name: backend
   spec:
@@ -14,12 +14,18 @@ items:
       ports:
       - containerPort: 3306
         name: backend
-
+      volumeMounts:
+      - mountPath: /var/lib/mysql/backend
+        name: backend-volume
+    volumes:
+    - name: backend-volume
+      persistentVolumeClaim:
+        claimName: backend-claim
 - apiVersion: v1
   kind: Pod
   metadata:
     labels:
-      app: application
+      app: hw3
       name: flask
     name: flask
   spec:
@@ -32,5 +38,44 @@ items:
       ports:
       - containerPort: 5000
         name: flask
+      resources:
+        limits:
+          cpu: "0.5"
+- apiVersion: v1
+  kind: Service
+  metadata:
+    labels:
+      app: hw3
+      name: flask
+    name: flask
+  spec:
+    ports:
+    - port: 5000
+    selector: 
+      name: flask
+- apiVersion: v1
+  kind: Service
+  metadata:
+    labels: 
+      app: hw3
+      name: backend
+    name: backend
+  spec:
+    ports:
+    - port: 3306
+    selector:
+      name: backend
+- apiVersion: v1
+  kind: PersistentVolumeClaim
+  metadata: 
+    labels: 
+      app: hw3
+    name: backend-claim
+  spec:
+    accessModes:
+    - ReadWriteOnce
+    resources:
+      requests:
+        storage: 10Mi
 kind: List
 metadata: {}
