--- a/hw3.yml
+++ b/hw3.yml
@@ -9,13 +9,18 @@ items:
     name: backend
   spec:
     containers:
-    - env:
+    - name: backend
+      env:
       - name: MARIADB_ROOT_PASSWORD
         value: Password123!
       - name: MARIADB_DATABASE
         value: demo
       image: quay.io/rpatel0019/db_image
-      name: backend
+      command:
+      - chown
+      - -R
+      - $(whoami)
+      - /var/lib/mysql
       ports:
       - containerPort: 3306
         name: backend
@@ -26,19 +31,16 @@ items:
     - name: backend-volume
       persistentVolumeClaim:
         claimName: backend-claim
-    initContainers:
+    '''initContainers:
     - name: backend-ownership
       image: quay.io/rpatel0019/db_image
       # Give `mysql` user permissions a mounted volume
       # https://stackoverflow.com/a/51195446/4360433
-      command:
-      - chown
-      - -R
-      - $(whoami)
-      - /var/lib/mysql
+
       volumeMounts:
       - name: backend-volume
-        mountPath: /var/lib/mysql    
+        mountPath: /var/lib/mysql  
+        '''  
 - apiVersion: v1
   kind: Pod
   metadata:
